; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/openbsd/dos/extr_23392.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/openbsd/dos/extr_23392.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sembuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %9, %0
  %4 = load i32, i32* %2, align 4
  %5 = icmp slt i32 %4, 64
  br i1 %5, label %6, label %12

6:                                                ; preds = %3
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @semop(i32 %7, %struct.sembuf* null, i32 0)
  br label %9

9:                                                ; preds = %6
  %10 = load i32, i32* %2, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %2, align 4
  br label %3

12:                                               ; preds = %3
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @semop(i32, %struct.sembuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
